force-app/main/default/objects/inspire1__Portfolio_Dashboard_Setting__c/inspire1__Portfolio_Dashboard_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Inspire Planner - Used to define User Portfolio defaults for Portfolio dashboard component.</description>
    <label>Portfolio Dashboard Setting</label>
</CustomObject>