force-app/main/default/objects/inspire1__Portfolio_Dashboard_Setting__c/fields/inspire1__Page_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Page_Name__c</fullName>
    <label>Page Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>