force-app/main/default/objects/inspire1__Portfolio_Dashboard_Setting__c/fields/inspire1__Portfolio_Id__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Portfolio_Id__c</fullName>
    <label>Portfolio Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>