force-app/main/default/objects/inspire1__Portfolio_Dashboard_Setting__c/listViews/inspire1__All_fields.listView-meta.xml
<ListView>
    <fullName>inspire1__All_fields</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Page_Name__c</columns>
    <columns>inspire1__Portfolio_Id__c</columns>
    <columns>inspire1__User_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
    <language>en_US</language>
</ListView>